--- a/index.css
+++ b/index.css
@@ -251,6 +251,167 @@ height: 500px;
   background-color: #005bbb;
 }
 
+/* Responsividade para iPad Mini (768x1025) */
+@media screen and (min-width: 706px) and (max-width: 768px) {
+  body, html {
+    background: linear-gradient(to bottom, #192627, #004aad); 
+    height: 100%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -2;
+  }
+
+  .center {
+    position: relative;
+    bottom: 70px;
+    width: 700px;
+    height: 870px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    left: 0;
+  }
+
+  @property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+  }
+
+  .center::after, .card::before {
+    content: '';
+    position: absolute;
+    width: 705px;
+    height: 875px;
+    background-image: conic-gradient(from var(--angle), transparent 90%, white);
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 15px;
+    border-radius: 20px;
+    animation: 3s spin linear infinite;
+  }
+
+  .card::before {
+    filter: blur(1.5rem);
+    opacity: 0.5;
+  }
+
+  @keyframes spin {
+    from {
+      --angle: 0deg;
+    }
+    to {
+      --angle: 360deg;
+    }
+  }
+
+  .navbar {
+    padding: 10px;
+    flex-direction: row;
+    border-radius: 20px;
+  }
+
+  .accordion {
+    font-size: 18px;
+    padding: 15px;
+  }
+
+  .content {
+    font-size: 18px;
+    padding: 20px;
+  }
+
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .col {
+    margin-bottom: 25px;
+    width: 100%;
+  }
+
+  .home-leftSide h3 {
+    font-size: 24px;
+  }
+
+  .home-leftSide button {
+    padding: 15px 30px;
+    font-size: 20px;
+  }
+
+  .home-rightSide {
+    height: auto;
+    width: 100%;
+  }
+
+  .experiencia, .certificates {
+    padding: 30px;
+    overflow-y: auto;
+    max-height: 85vh;
+  }
+
+  .expin, .certificates div {
+    padding: 30px 25px 25px 30px;
+  }
+
+  .p1 {
+    overflow-x: auto;
+    overflow-y: auto !important;
+  }
+
+  .projetos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    padding: 15px;
+    box-sizing: border-box;
+  }
+
+  .projetos > div {
+    width: 100%;
+    margin-bottom: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+  }
+
+  .projetos img {
+    width: 100%;
+    max-height: 350px;
+    object-fit: cover;
+    border-radius: 20px;
+  }
+
+  .projetos span {
+    width: 100%;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .projetos button {
+    padding: 15px 30px;
+    font-size: 20px;
+    margin-top: 15px;
+  }
+
+  .profilePhoto {
+    position: relative;
+    width: 100%;
+    height: auto;
+    border-radius: 20px;
+  }
+}
+
+
 
 /* Responsividade para iPhone 14 Pro Max (430x932) */
 @media screen and (max-width: 430px) {
@@ -685,4 +846,169 @@ height: 500px;
     border-radius: 15px;
   }
 
+}
+
+/* Responsividade para iPad Air (820x1180) */
+@media screen and (min-width: 770px) and (max-width: 900px) {
+  body, html {
+    background: linear-gradient(to bottom, #192627, #004aad); 
+    height: 890px;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -2;
+  }
+
+  .center {
+    position: relative;
+    width: 780px;
+    height: 850px;
+    padding: 25px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
+    left: 0;
+  }
+
+  .center h1 {
+    height: 130px;
+  }
+
+  @property --angle {
+    syntax: "<angle>";
+    initial-value: 0deg;
+    inherits: false;
+  }
+
+  .center::after, .card::before {
+    content: '';
+    position: absolute;
+    width: 785px;
+    height: 855px;
+    background-image: conic-gradient(from var(--angle), transparent 90%, white);
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    z-index: -1;
+    padding: 20px;
+    border-radius: 20px;
+    animation: 3s spin linear infinite;
+  }
+
+  .card::before {
+    filter: blur(1.5rem);
+    opacity: 0.5;
+  }
+
+  @keyframes spin {
+    from {
+      --angle: 0deg;
+    }
+    to {
+      --angle: 360deg;
+    }
+  }
+
+  .navbar {
+    padding: 15px;
+    flex-direction: row;
+    border-radius: 20px;
+  }
+
+  .accordion {
+    font-size: 20px;
+    padding: 20px;
+  }
+
+  .content {
+    font-size: 20px;
+    padding: 25px;
+  }
+
+  .row {
+    align-items: center;
+  }
+
+  .col {
+    margin-bottom: 30px;
+    width: 100%;
+  }
+
+  .home-leftSide h3 {
+    font-size: 26px;
+  }
+
+  .home-leftSide div{
+    width: 140px;
+  }
+
+  .home-leftSide button {
+    padding: 18px 35px;
+    font-size: 22px;
+  }
+
+  .home-rightSide {
+    height: auto;
+    width: 100%;
+  }
+
+  .experiencia, .certificates {
+    padding: 35px;
+    overflow-y: auto;
+    max-height: 85vh;
+  }
+
+  .expin, .certificates div {
+    padding: 35px 30px 30px 35px;
+  }
+
+  .p1 {
+    overflow-x: auto;
+    overflow-y: auto !important;
+  }
+
+  .projetos {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+
+  .projetos > div {
+    width: 100%;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+  }
+
+  .projetos img {
+    width: 100%;
+    max-height: 380px;
+    object-fit: cover;
+    border-radius: 20px;
+  }
+
+  .projetos span {
+    width: 100%;
+    text-align: center;
+    font-size: 20px;
+  }
+
+  .projetos button {
+    padding: 18px 35px;
+    font-size: 22px;
+    margin-top: 20px;
+  }
+
+  .profilePhoto {
+    position: relative;
+    height: auto;
+    border-radius: 20px;
+  }
 }
