--- a/index.css
+++ b/index.css
@@ -190,6 +190,35 @@ opacity: 0.5;
   list-style: none;
 }
 
+.infinite-scroll {
+  overflow: hidden;
+  width: 100%;
+}
+
+.infinite-scroll .row{
+  display: flex;
+  width: calc(14 * 200px); /* Adjust based on the number of items and their width */
+  animation: scroll 15s linear infinite;
+}
+
+.infinite-scroll .col {
+  flex: 0 0 auto;
+  width: 200px; /* Adjust based on your item width */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@keyframes scroll {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(calc(-100% / 2)); /* Scroll by half of the total width */
+  }
+}
+
+
 .unijuiLogo{
   padding: 5px;
   width: 45px;
@@ -410,12 +439,19 @@ height: 500px;
   .experiencia, .certificates {
     padding: 30px;
     overflow-y: auto;
-    max-height: 85vh;
+    max-height: 75vh;
   }
 
   .expin, .certificates div {
     padding: 30px 25px 25px 30px;
   }
+
+  .infinite-scroll .row {
+    display: flex;
+    width: calc(14* 200px);
+    animation: scroll 15s linear infinite;
+    flex-direction: row;
+}
 
   .p1 {
     overflow-x: auto;
@@ -572,6 +608,13 @@ height: 500px;
     overflow-y: auto;
     max-height: 80vh; /* Limitar a altura para garantir que ambas caibam na tela */
   }
+
+  .infinite-scroll .row {
+    display: flex;
+    width: calc(14* 200px);
+    animation: scroll 15s linear infinite;
+    flex-direction: row;
+}
 
   .expin, .certificates div {
     padding: 25px 20px 20px 25px;
@@ -735,7 +778,7 @@ height: 500px;
     padding: 20px;
     flex-grow: 1;
     overflow-y: auto;
-    max-height: 80vh;
+    max-height: 65vh;
   }
 
   .expin, .certificates div {
@@ -908,7 +951,7 @@ height: 500px;
 @media screen and (min-width: 770px) and (max-width: 900px) {
   body, html {
     background: linear-gradient(to bottom, #192627, #004aad); 
-    height: 890px;
+    height: 1180px;
     margin: 0;
     display: flex;
     justify-content: center;
@@ -1013,7 +1056,7 @@ height: 500px;
   .experiencia, .certificates {
     padding: 35px;
     overflow-y: auto;
-    max-height: 85vh;
+    max-height: 65vh;
   }
 
   .expin, .certificates div {
