--- a/index.css
+++ b/index.css
@@ -257,9 +257,31 @@ opacity: 0.5;
   box-shadow: inset 0 0 100px #004494;
 }
 
-.projetos{
-position: relative;
+.projetos {
+  position: relative;
 }
+
+.overflow {
+  overflow: auto; /* Permite o scroll */
+  position: relative;
+  border-radius: 30px; /* Ajusta o arredondamento para cantos suaves */
+  width: 100%; /* Ajuste o tamanho conforme necessário */
+  height: 400px; /* Altura ajustável */
+  padding: 10px; /* Opcional: adiciona um padding interno */
+  box-sizing: border-box; /* Garante que o padding e as bordas sejam incluídos nas dimensões */
+  
+  /* Esconde a barra de rolagem no WebKit (Chrome, Safari) */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* Internet Explorer e Edge */
+}
+
+/* Esconde a barra de rolagem no WebKit (Chrome, Safari) */
+.overflow::-webkit-scrollbar {
+  display: none; /* Oculta a barra de rolagem */
+}
+
+
+
 
 .projetos div{
 height: 500px;
