ajuste nos paragrafos dos projetos

--- a/index.css
+++ b/index.css
@@ -281,10 +281,12 @@ opacity: 0.5;
 }
 
 
-
+.projetos p{
+  text-align: center;
+}
 
 .projetos div{
-height: 500px;
+height: 550px;
 }
 
 .projetos img{
